Fix - padding removed from left aligned elements

--- a/src/app.scss
+++ b/src/app.scss
@@ -305,8 +305,6 @@ float:right;
 } 
 .leftAligned {
     text-align: left;
-    padding-left: 5px;
-    padding-right:5px;
 }
 .textCenter {
     text-align: center;
